--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js",
+    "dev": "nodemon server.js",
     "test": "vitest"
   },
   "imports": {
     "#*": "./*.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "supertest": "^7.1.0",
